--- a/templates/tpos/_cart.html
+++ b/templates/tpos/_cart.html
@@ -19,8 +19,7 @@
           <span v-text="totalfsat"></span><small> sat</small>
         </h5>
       </div>
-      <div class="col-12" 
-      :style="drawerItemsHeight">
+      <div class="col-12" :style="drawerItemsHeight">
         <table class="table full-width" virtual-scroll>
           <colgroup>
             <col width="50%" />
