feat: Adding fiat option if fiat funding provider is available (#142)
* Adding fiat option if fiat funding source is available

I think prob best play if its available is to do
https://stripe-payment-link.com?lightning=lnbc..

that way the invoice could be scanned with a qrcode scanner to pay the stripe invoice and then also scanned with bitcoin wallet to pay.
Useful for selling OTC bits, and for merchants who don't want to be running 2 pos solutions.

only display fiat if it's available

fetch fiat payment

separation of concerns

show fiat QR supported

pass fiat amounts to backend

send fiat payment to UI

fix wrong amounts using new method

chore: lint

clean logs

working

Made dialog simpler

creates a weird look to qrcodes on mobile

i was wrong

* chore: lint

* fix: rebase fuckup

* fix: create payment request

* .

* lock

* mypy issue float vs int

* chore: lint

* fix: revert to core create_payment_request

---------

Co-authored-by: Tiago Vasconcelos <talvasconcelos@gmail.com>

--- a/templates/tpos/dialogs.html
+++ b/templates/tpos/dialogs.html
@@ -2,6 +2,7 @@
   <q-dialog
     v-model="invoiceDialog.show"
     position="top"
+    persistent
     @hide="closeInvoiceDialog"
   >
     <q-card
@@ -9,12 +10,12 @@
       class="q-pa-lg q-pt-xl lnbits__dialog-card"
     >
       <a
-        :href="'lightning:' + invoiceDialog.data.payment_request.toUpperCase()"
+        :href="invoiceDialog.data.payment_request"
         target="_blank"
         rel="noopener noreferrer"
       >
         <lnbits-qrcode
-          :value="'lightning:' + invoiceDialog.data.payment_request.toUpperCase()"
+          :value="invoiceDialog.data.payment_request"
           class="rounded-borders"
         ></lnbits-qrcode>
         <q-tooltip>Pay in wallet</q-tooltip>
@@ -261,6 +262,31 @@
           </div>
         </q-form>
       </q-card-section>
+    </q-card>
+  </q-dialog>
+
+  <q-dialog v-model="currency_choice" persistent>
+    <q-card class="q-pa-md">
+      <div class="text-h6 q-mb-md">Payment Method</div>
+      <div class="row q-gutter-sm justify-center">
+        <q-btn
+          class="q-ma-lg"
+          size="xl"
+          label="BTC"
+          color="primary"
+          rounded
+          @click="selectPaymentMethod('btc')"
+        >
+        </q-btn>
+        <q-btn
+          class="q-ma-lg"
+          size="xl"
+          :label="currency"
+          color="secondary"
+          rounded
+          @click="selectPaymentMethod('fiat')"
+        ></q-btn>
+      </div>
     </q-card>
   </q-dialog>
 </template>
