hide header toggle

--- a/templates/tpos/_options_fab.html
+++ b/templates/tpos/_options_fab.html
@@ -24,6 +24,14 @@
   ></q-fab-action>
   <q-fab-action
     color="primary"
+    @click.prevent="headerToggle"
+    :icon="headerElement && headerElement.style.display === 'none' ? 'visibility' : 'visibility_off'"
+    external-label
+    label-position="left"
+    :label="headerElement && headerElement.style.display === 'none' ? 'Show Header' : 'Hide Header'"
+  ></q-fab-action>
+  <q-fab-action
+    color="primary"
     @click="startAtmMode"
     v-if="withdrawMaximum > 0 && !atmMode"
     icon="atm"
