--- a/templates/tpos/index.html
+++ b/templates/tpos/index.html
@@ -457,6 +457,12 @@
           </q-select>
         </template>
         <template v-if="formDialog.advanced.otc">
+          <div
+            class="text-caption text-black rounded-borders bg-warning q-pa-sm"
+          >
+            TPoS is free to use. A small 0.5% fee is applied to withdrawals to
+            support LNbits development.
+          </div>
           <q-input
             filled
             dense
