--- a/templates/tpos/dialogs.html
+++ b/templates/tpos/dialogs.html
@@ -161,11 +161,16 @@
         >
           <template v-slot:header>
             <q-item-section>
-              <q-item-label
-                v-if="payment.amountFiat"
-                class="text-bold"
-                v-text="payment.amountFiat"
-              >
+              <q-item-label v-if="payment.amountFiat">
+                <span class="text-bold" v-text="payment.amountFiat"></span>
+                <span
+                  class="text-italic q-ml-sm"
+                  v-text="`(${payment.amountFiatNow})`"
+                >
+                </span>
+                <q-tooltip>
+                  Amount at payment time vs current amount
+                </q-tooltip>
               </q-item-label>
               <q-item-label
                 class="text-bold"
@@ -188,7 +193,7 @@
               ></q-item-label>
             </q-item-section>
           </template>
-          <q-card>
+          <q-card class="q-ma-md">
             <q-card-section v-if="paymentDetails && paymentDetails.items">
               <q-list separator>
                 <q-item
@@ -205,11 +210,22 @@
                     ></q-item-label>
                   </q-item-section>
                 </q-item>
+                <q-item>
+                  <q-item-section>
+                    <q-item-label class="text-bold">Total</q-item-label>
+                  </q-item-section>
+                  <q-item-section side>
+                    <q-item-label
+                      class="text-bold"
+                      v-text="payment.amountFiat"
+                    ></q-item-label>
+                  </q-item-section>
+                </q-item>
               </q-list>
-              <q-inner-loading :showing="paymentDetails == null">
-                <q-spinner-gears size="30px" color="primary"></q-spinner-gears>
-              </q-inner-loading>
             </q-card-section>
+            <q-inner-loading :showing="!paymentDetails">
+              <q-spinner-gears size="30px" color="primary"></q-spinner-gears>
+            </q-inner-loading>
             <q-card-actions
               align="right"
               v-if="enablePrint && payment.amount > 0"
@@ -223,81 +239,6 @@
             </q-card-actions>
           </q-card>
         </q-expansion-item>
-        <q-item v-for="(payment, idx) in lastPaymentsDialog.data" :key="idx">
-          <q-item-section>
-            <q-item-label
-              v-if="payment.amountFiat"
-              class="text-bold"
-              v-text="payment.amountFiat"
-            >
-            </q-item-label>
-            <q-item-label
-              class="text-bold"
-              v-text="formatBalance(payment.amount  / 1000)"
-            >
-            </q-item-label>
-            <q-item-label caption>
-              <q-icon
-                class="q-mr-sm"
-                size="sm"
-                name="check"
-                color="green"
-              ></q-icon>
-              <span v-text="payment.dateFrom"></span>
-            </q-item-label>
-            <q-item-label caption lines="2"
-              >Hash: ${payment.checking_id.slice(0, 30)}...</q-item-label
-            >
-          </q-item-section>
-          <q-item-section side v-if="enablePrint && payment.amount > 0">
-            <div class="q-gutter-sm">
-              <q-btn
-                round
-                icon="print"
-                color="primary"
-                @click="printReceipt(payment.checking_id)"
-              ></q-btn>
-              <q-btn
-                round
-                icon="more_vert"
-                @click="showDetails(payment.checking_id)"
-              >
-                <q-menu auto-close @hide="paymentDetails = null">
-                  <q-list style="min-width: 150px">
-                    <q-item v-if="!paymentDetails.items">
-                      <q-item-section
-                        v-text="paymentDetails.paymentHash"
-                      ></q-item-section>
-                    </q-item>
-                    <q-item
-                      v-else
-                      v-for="(item, index) in paymentDetails.items"
-                      :key="index"
-                    >
-                      <q-item-section>
-                        <q-item-label v-text="item.title"></q-item-label>
-                        <q-item-label
-                          caption
-                          v-text="item.formattedPrice"
-                        ></q-item-label>
-                      </q-item-section>
-                      <q-item-section side top>
-                        <q-item-label caption>Qty</q-item-label>
-                        <q-item-label v-text="item.quantity"></q-item-label>
-                      </q-item-section>
-                    </q-item>
-                  </q-list>
-                  <q-inner-loading :showing="paymentDetails == null">
-                    <q-spinner-gears
-                      size="30px"
-                      color="primary"
-                    ></q-spinner-gears>
-                  </q-inner-loading>
-                </q-menu>
-              </q-btn>
-            </div>
-          </q-item-section>
-        </q-item>
       </q-list>
     </q-card>
   </q-dialog>
