fix: Change inputmode from 'numeric' to 'decimal' for Tip Options field
Before: inputmode='numeric' caused mobile keyboards to show numeric keypad
without Enter key, preventing users from adding tip values by pressing Enter.

After: Changed to inputmode='decimal' which shows numeric keyboard WITH Enter
key on mobile, allowing users to type tip percentages and press Enter to add them.

--- a/templates/tpos/index.html
+++ b/templates/tpos/index.html
@@ -463,7 +463,7 @@
             use-chips
             hide-dropdown-icon
             input-debounce="0"
-            inputmode="numeric"
+            inputmode="decimal"
             new-value-mode="add-unique"
             label="Tip % Options (hit enter to add values)"
             ><q-tooltip>Hit enter to add values</q-tooltip>
